Fix content alignment issue

--- a/src/components/layout.module.css
+++ b/src/components/layout.module.css
@@ -45,7 +45,8 @@ nav {
 }
 
 .content {
-	margin: 50px 10px 50px 10px;
+	padding: 50px 10px 50px 10px;
+	margin: auto;
 	max-width: 500px;
 }
 
